[package]
name = "yearly-version"
version = "0.0.3"
authors = ["Aster <192607617@qq.com>"]
description = "Rust implementation of Yearly Version"
homepage = "https://github.com/yearly-version"
repository = "https://github.com/yearly-version/version.rs"
documentation = "https://docs.rs/yearly-version"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.198", optional = true }
semver = { version = "1.0.22", optional = true }
schemars = { version = "0.8.16", optional = true }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
